--- a/styles/sliderman.css
+++ b/styles/sliderman.css
@@ -1,7 +1,6 @@
-#slider_container_2 { float: left; margin: 0 0 0 -15px; padding: 15px; width: 700px; background: url(../images/bg.png) no-repeat 0 0; }
+#slider_container_2 { margin: 0 auto 0 auto; padding: 15px; width: 700px; background: url(../images/bg.png) no-repeat 0 0; }
 
 .SliderName_2 {
-	float: left;
 	width: 700px;
 	height: 450px;
 	overflow: hidden;
