--- a/styles/style_cast.css
+++ b/styles/style_cast.css
@@ -1,10 +1,11 @@
 body{
 	background: url('images/group_photo.jpg');
 }
-img {
+.cms-repeat img {
 	display: inline-block;
 	vertical-align: middle;
 	padding-bottom: 10px;
+	width: 150px;
 }
 h1{
 	text-align: center;
@@ -33,4 +34,8 @@ h1{
 
 .bio-popup-wrapper{
 	padding: 15px;
+}
+
+.cms-editable.biotext{
+	padding-top: 10px;
 }
