--- a/styles/style.css
+++ b/styles/style.css
@@ -105,18 +105,19 @@ z-index: 10000;
 .main_page_content{
   background: #500000;
   margin-left:auto;
-      margin-right:auto;
-      overflow:hidden;
-      width:465px;
-      box-shadow: inset 0 50px rgba(255,255,255,0.1),
-             inset 2px -15px 30px rgba(0,0,0,0.4),
-             2px 2px 5px rgba(0,0,0,0.3);
-      padding: 25px;
-      border-radius: 20px;
-      -webkit-border-radius: 20px;
-      -moz-border-radius: 20px;
-      vertical-align: middle;
-      text-align:center;
+  margin-right:auto;
+  margin-bottom: 40px;
+  overflow:hidden;
+  width:465px;
+  box-shadow: inset 0 50px rgba(255,255,255,0.1),
+         inset 2px -15px 30px rgba(0,0,0,0.4),
+         2px 2px 5px rgba(0,0,0,0.3);
+  padding: 25px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  vertical-align: middle;
+  text-align:center;
 }
 
 .main_text{
