--- a/styles/style.css
+++ b/styles/style.css
@@ -122,6 +122,17 @@ z-index: 10000;
 
 .main_text{
   margin: 10px 50px 20px 50px;
+  background-color: black;
+  background: -webkit-linear-gradient(top, #000a0a, rgba(0,10,10,0.4));
+  background: -moz-linear-gradient(top, #000a0a, rgba(0,10,10,0.4));
+  padding: 10px;
+  line-height: 24px;
+  text-align: justify;
+  margin: -120px 67px 50px 229px;
+  border-radius: 5px;
+  display: inline;
+  float: right;
+  border: 1px solid #380000 ;
 }
 
 
