--- a/styles/style.css
+++ b/styles/style.css
@@ -134,11 +134,21 @@ z-index: 10000;
   float: right;
   border: 1px solid #380000 ;
 }
-.email_form{
-  padding:100px 10px 10px 50px;
-}
-.email_form input, .email_form form{
-  color: black;
+
+.contact_t{
+  padding: 20px 20px 20px 25px;
+  background-color: black;
+  background: -webkit-linear-gradient(top, #000a0a, rgba(0,10,10,0.4));
+  background: -moz-linear-gradient(top, #000a0a, rgba(0,10,10,0.4));
+  line-height: 24px;
+  text-align: justify;
+  border-radius: 5px;
+  display: inline;
+  float: left;
+  border: 1px solid #380000;
+  margin: 110px 20px 20px 50px;
+  font-family: Cambria, Georgia, serif;
+  font-size: 16px;
 }
 
 
