--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@ z-index: 10000;
      -moz-border-radius: 20px;
 }
 .main_page_content{
-  background: #666699;
+  background: #483D8B;
   margin-left:auto;
   margin-right:auto;
   margin-bottom: 40px;
