--- a/styles/style.css
+++ b/styles/style.css
@@ -122,6 +122,14 @@ z-index: 10000;
   vertical-align: middle;
   text-align:center;
 }
+@media (max-width: 760px) {
+  .main_page_content{
+    margin-right: 50px;
+  }
+  .navigation_bar li{
+    margin: 0 2px;
+  }
+}
 
 .main_text{
   /*margin: 10px 50px 20px 50px;*/
@@ -154,7 +162,29 @@ z-index: 10000;
   font-size: 16px;
 }
 
-
+.eventbrite{
+/*  background-color: black;
+  background: -webkit-linear-gradient(top, #000a0a, rgba(0,10,10,0.8));
+  background: -moz-linear-gradient(top, #000a0a, rgba(0,10,10,0.8));*/
+  padding: 7px;
+  line-height: 24px;
+  text-align: justify;
+  margin: -525px 67px 20px 25px;
+  border-radius: 5px;
+  display: inline;
+  float: left;
+ /* border: 1px solid #380000 ;*/
+  text-shadow: 3px 3px 2px black;
+  line-height: 20px;
+  font-size: 16px;
+}
+.eventbrite a:hover{
+  color: black;
+  text-shadow: 1px 1px 1px red;
+}
+.eventbrite a{
+  font-size: 14px;
+}
 
 
 
