--- a/styles/style_about.css
+++ b/styles/style_about.css
@@ -1,5 +1,5 @@
 .about_the_show{
-	padding: 82px 100px 18px 100px;
+	padding: 82px 80px 18px 80px;
 
 /*	background-color: #DDA0DD;*/
   background: -webkit-linear-gradient(bottom, rgba(60,00,00,.1), rgba(60,00,00,1));
@@ -14,7 +14,7 @@
   color: black;
   width: 385px;
   padding: 10px;
-  line-height: 24px;
+  line-height: 22px;
   text-align: justify;
   border-radius: 5px;
   display: block;
@@ -26,4 +26,13 @@
   font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
   font-size: 14px;
   font-weight: bold;
+}
+
+.fon{
+  background-color: black;
+  background: -webkit-linear-gradient(top, #000a0a, rgba(0,10,10,0.4));
+  background: -moz-linear-gradient(top, #000a0a, rgba(0,10,10,0.4));
+  padding: 7px;
+  line-height: 24px;
+  text-align: justify;
 }
