--- a/styles/style.css
+++ b/styles/style.css
@@ -122,7 +122,7 @@ z-index: 10000;
   vertical-align: middle;
   text-align:center;
 }
-@media (max-width: 760px) {
+@media (max-width: 840px) {
   .main_page_content{
     margin-right: 50px;
   }
@@ -176,14 +176,15 @@ z-index: 10000;
  /* border: 1px solid #380000 ;*/
   text-shadow: 3px 3px 2px black;
   line-height: 20px;
-  font-size: 16px;
+  font-size: 14px;
+/*  font-style:italic;*/
 }
 .eventbrite a:hover{
   color: black;
   text-shadow: 1px 1px 1px red;
 }
 .eventbrite a{
-  font-size: 14px;
+  font-size: 12px;
 }
 
 
